--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Linked List Implementation in JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
