--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.25.0",
+    "@jest/globals": "^29.7.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
